# vcdiff-rs

./: Cargo.toml
open-vcdiff-sys/: Cargo.toml  build.rs
open-vcdiff-sys/src/: config.h  glue.cc  glue.h  lib.rs
src/: lib.rs  streaming.rs
