[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "Low-level bindings to open-vcdiff, a codec for the VCDIFF binary delta format."
homepage = "https://github.com/dflemstr/vcdiff-rs"
license = "Apache-2.0"
build = "build.rs"
name = "open-vcdiff-sys"
repository = "https://github.com/dflemstr/vcdiff-rs"
version = "0.1.0"

[build-dependencies]
gcc = "0.3.39"
tempdir = "0.3.5"
